[package]
name = "gdtool-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = "0.24"
simple_excel_writer = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
convert_case = "0.6"
tera = "1.20"
chrono = "0.4"
